--- a/client-jss/src/app/main/components/header/header.component.css
+++ b/client-jss/src/app/main/components/header/header.component.css
@@ -43,3 +43,7 @@
 .dropdown-header {
   color: var(--ar-secondary) !important;
 }
+
+.navbar-nav .nav-link.active {
+  color: #CCE1FA !important;
+}
