--- a/client-jss/src/app/main/components/post/post.component.html
+++ b/client-jss/src/app/main/components/post/post.component.html
@@ -44,8 +44,11 @@
               <button *ngIf="currentUser" class="btn btn-primary" (click)="openOfferPostModal(givePostModal)"><i
                   class="bi bi-gift me-2"></i>Offrir cet article</button>
             </div>
-            <div class="col-auto mt-0">
-              <a class="btn btn-primary"><i class="bi bi-bookmark me-2"></i>Enregistrer</a>
+            <div class="col-auto mt-0" *ngIf="currentUser">
+              <button *ngIf="currentUser" class="btn btn-primary"
+                (click)="post.isBookmarked ? unBookmarkPost(post) : bookmarkPost(post)"><i [ngClass]="{'bi-bookmark': !post.isBookmarked,
+                                'bi-bookmark-fill text-dark': post.isBookmarked,
+                                'text-transparent': !post.isBookmarked}" class="bi  me-2"></i>Enregistrer</button>
             </div>
             <div class="col-auto mt-0">
               <!-- Share dropdown -->
