--- a/client-myjss/src/app/modules/my-account/components/communication-preference/communication-preference.component.html
+++ b/client-myjss/src/app/modules/my-account/components/communication-preference/communication-preference.component.html
@@ -1,4 +1,4 @@
-<h1 class="h2 my-2">Mes préférences de communication</h1>
+<h1 class="h2 my-2">Newsletter et alertes</h1>
 
 <section class="card border-0 py-1 p-md-2 p-xl-3 p-xxl-4" *ngIf="!communicationPreference">
   <div class="card-body">
@@ -12,7 +12,7 @@
   </div>
 </section>
 
-<section class="card border-0 py-1 p-md-2 p-xl-3 p-xxl-4" *ngIf="communicationPreference">
+<section class="card border-0 py-1 p-md-2 p-xl-3 p-xxl-4 mb-4" *ngIf="communicationPreference">
   <div class="card-body">
     <div class="d-flex align-items-center mt-sm-n1 pb-4 mb-0 mb-lg-1 mb-xl-3">
       <i class="ai-messages text-primary lead pe-1 me-2"></i>
@@ -46,77 +46,81 @@
   </div>
 </section>
 
-<section class="card border-0 py-1 ">
+<section class="card border-0 py-1 p-md-2 p-xl-3 p-xxl-4 mb-4 "
+  *ngIf="followedAuthors && followedAuthors.length>0 || followedJssCategories && followedJssCategories.length>0 || followedTags && followedTags.length>0">
   <div class="card-body">
-    <hr>
-    <h2 class="h4 mb-4">Gérer vos contenus suivis</h2>
-    <ul class="nav nav-tabs" role="tablist">
-      <li class="nav-item" *ngFor="let item of followedItems">
-        <a class="nav-link cursor-pointer" [class.active]="item === selectedTab" (click)="selectedTab = item"
-          role="tab">
-          {{ item }}
-        </a>
+    <div class="d-flex align-items-center mt-sm-n1 pb-4 mb-0 mb-lg-1 mb-xl-3">
+      <i class="ai-bell text-primary lead pe-1 me-2"></i>
+      <h2 class="h4 mb-0">Mes alertes</h2>
+    </div>
+
+
+    <ul ngbNav #nav="ngbNav" [activeId]="displayedTab" class="nav-tabs">
+      <li [ngbNavItem]="0" *ngIf="followedAuthors && followedAuthors.length>0">
+        <button ngbNavLink>Rédacteurs</button>
+        <ng-template ngbNavContent>
+          <ul class="list-group list-group-flush custom-list-group">
+            <li *ngFor="let author of followedAuthors"
+              class="list-group-item d-flex justify-content-between align-items-center border-0 border-bottom">
+              <span>{{ author.name }}</span>
+              <div class="d-flex gap-2">
+                <button type="button" class="btn btn-outline-dark" (click)="openAuthorNewPosts($event, author)">
+                  Voir les news
+                </button>
+                <button type="button" class="btn btn-outline-dark"
+                  (click)="isFollowedAuthor[author.id] ? unfollowAuthor(author) : followAuthor(author)">
+                  <i class="ai" [ngClass]="isFollowedAuthor[author.id] ? 'ai-check-lg' : 'ai-plus-lg'"></i>
+                  {{ isFollowedAuthor[author.id] ? 'Suivi' : 'Suivre' }}
+                </button>
+              </div>
+            </li>
+          </ul>
+        </ng-template>
+      </li>
+      <li [ngbNavItem]="1" *ngIf="followedJssCategories && followedJssCategories.length>0">
+        <button ngbNavLink>Catégories</button>
+        <ng-template ngbNavContent>
+          <ul class="list-group list-group-flush custom-list-group">
+            <li *ngFor="let jssCategory of followedJssCategories"
+              class="list-group-item d-flex justify-content-between align-items-center border-0 border-bottom">
+              <span> {{jssCategory.name}}</span>
+              <div class="d-flex gap-2">
+                <button type="button" class="btn btn-outline-dark"
+                  (click)="openJssCategoryNewPosts($event, jssCategory)">
+                  Voir les news
+                </button>
+                <button type="button" class="btn btn-outline-dark"
+                  (click)="isFollowedJssCategory[jssCategory.id] ? unfollowJssCategory(jssCategory) : followJssCategory(jssCategory)">
+                  <i class="bi" [ngClass]="isFollowedJssCategory[jssCategory.id] ? 'bi-check-lg' : 'bi-plus-lg'"></i>
+                  {{ isFollowedJssCategory[jssCategory.id] ? 'Suivi' : 'Suivre' }}
+                </button>
+              </div>
+            </li>
+          </ul>
+        </ng-template>
+      </li>
+      <li [ngbNavItem]="2" *ngIf="followedTags && followedTags.length>0">
+        <button ngbNavLink>Tags</button>
+        <ng-template ngbNavContent>
+          <ul class="list-group list-group-flush custom-list-group">
+            <li *ngFor="let tag of followedTags"
+              class="list-group-item d-flex justify-content-between align-items-center border-0 border-bottom">
+              <span>{{tag.name}}</span>
+              <div class="d-flex gap-2">
+                <button type="button" class="btn btn-outline-dark" (click)="openTagNewPosts($event,tag)">
+                  Voir les news
+                </button>
+                <button type="button" class="btn btn-outline-dark"
+                  (click)="isFollowedTag[tag.id] ? unfollowTag(tag) : followTag(tag)">
+                  <i class="bi" [ngClass]="isFollowedTag[tag.id] ? 'bi-check-lg' : 'bi-plus-lg'"></i>
+                  {{ isFollowedTag[tag.id] ? 'Suivi' : 'Suivre' }}
+                </button>
+              </div>
+            </li>
+          </ul>
+        </ng-template>
       </li>
     </ul>
-
-    <div class="tab-content mt-3 w-100">
-      <div *ngIf="selectedTab === 'Rédacteurs'" class="w-100">
-        <ul class="list-group list-group-flush custom-list-group">
-          <li *ngFor="let author of followedAuthors"
-            class="list-group-item d-flex justify-content-between align-items-center border-0 border-bottom">
-            <span>{{ author.name }}</span>
-            <div class="d-flex gap-2">
-              <button type="button" class="btn btn-outline-dark" (click)="openAuthorNewPosts($event, author)">
-                Voir les news
-              </button>
-              <button type="button" class="btn btn-outline-dark"
-                (click)="isFollowedAuthor[author.id] ? unfollowAuthor(author) : followAuthor(author)">
-                <i class="ai" [ngClass]="isFollowedAuthor[author.id] ? 'ai-check-lg' : 'ai-plus-lg'"></i>
-                {{ isFollowedAuthor[author.id] ? 'Suivi' : 'Suivre' }}
-              </button>
-            </div>
-          </li>
-        </ul>
-      </div>
-
-      <div *ngIf="selectedTab === 'Catégories'">
-        <ul class="list-group list-group-flush custom-list-group">
-          <li *ngFor="let jssCategory of followedJssCategories"
-            class="list-group-item d-flex justify-content-between align-items-center border-0 border-bottom">
-            <span> {{jssCategory.name}}</span>
-            <div class="d-flex gap-2">
-              <button type="button" class="btn btn-outline-dark" (click)="openJssCategoryNewPosts($event, jssCategory)">
-                Voir les news
-              </button>
-              <button type="button" class="btn btn-outline-dark"
-                (click)="isFollowedJssCategory[jssCategory.id] ? unfollowJssCategory(jssCategory) : followJssCategory(jssCategory)">
-                <i class="bi" [ngClass]="isFollowedJssCategory[jssCategory.id] ? 'bi-check-lg' : 'bi-plus-lg'"></i>
-                {{ isFollowedJssCategory[jssCategory.id] ? 'Suivi' : 'Suivre' }}
-              </button>
-            </div>
-          </li>
-        </ul>
-      </div>
-
-      <div *ngIf="selectedTab === 'Tags'">
-        <ul class="list-group list-group-flush custom-list-group">
-          <li *ngFor="let tag of followedTags"
-            class="list-group-item d-flex justify-content-between align-items-center border-0 border-bottom">
-            <span>{{tag.name}}</span>
-            <div class="d-flex gap-2">
-              <button type="button" class="btn btn-outline-dark" (click)="openTagNewPosts($event,tag)">
-                Voir les news
-              </button>
-              <button type="button" class="btn btn-outline-dark"
-                (click)="isFollowedTag[tag.id] ? unfollowTag(tag) : followTag(tag)">
-                <i class="bi" [ngClass]="isFollowedTag[tag.id] ? 'bi-check-lg' : 'bi-plus-lg'"></i>
-                {{ isFollowedTag[tag.id] ? 'Suivi' : 'Suivre' }}
-              </button>
-            </div>
-          </li>
-        </ul>
-      </div>
-    </div>
+    <div [ngbNavOutlet]="nav" class="mt-2"></div>
   </div>
-
 </section>
