--- a/client-myjss/src/app/modules/main/components/default/default.component.html
+++ b/client-myjss/src/app/modules/main/components/default/default.component.html
@@ -5,3 +5,4 @@
   <main-footer *ngIf="isDisplayFooter()"></main-footer>
 </div>
 <toast style="display: block; position: fixed; bottom: 20px; right: 20px;" class="z-3"></toast>
+<loading></loading>
