--- a/client-jss/src/app/main/components/post/post.component.html
+++ b/client-jss/src/app/main/components/post/post.component.html
@@ -158,7 +158,7 @@
                     <a *ngFor="let relatedPost of post.relatedPosts.slice(0, 3)" (click)="openPost(relatedPost, $event)"
                       class="card-truncate-1">
                       <h6 class="m-0 p-1"><img *ngIf="post.isPremium" class="px-0 me-1"
-                          src="/assets/images/premium-icon.svg">{{relatedPost.titleText}}</h6>
+                          src="/assets/images/premium-icon.svg"> &#9632; {{relatedPost.titleText}}</h6>
                     </a>
                   </div>
                 </div>
