--- a/client-myjss/src/app/modules/miscellaneous/components/forms/generic-select/generic-multiple-select.component.html
+++ b/client-myjss/src/app/modules/miscellaneous/components/forms/generic-select/generic-multiple-select.component.html
@@ -1,10 +1,12 @@
-<div class="full-width row" [formGroup]="form!">
+<div class="full-width row" [formGroup]="form!" *ngIf="form">
   <div class="select-wrapper position-relative">
     <label [for]="'fl-text'+uniqueId" *ngIf="isDisplayLabel && label && label.length > 0" class="form-label">{{ label
       }}</label>
 
     <select class="form-select custom-multiselect" [formControlName]="propertyName" [id]="'fl-text'+uniqueId"
-      [required]="isMandatory" multiple [compareWith]="compareWithId" (blur)="blurForm()" [disabled]="isDisabled">
+      [required]="isMandatory" multiple [compareWith]="compareWithId" (blur)="blurForm()" [disabled]="isDisabled"
+      [class.is-invalid]="form.get(propertyName)?.invalid && form.get(propertyName)?.touched"
+      [class.is-valid]="form.get(propertyName)?.valid && form.get(propertyName)?.touched">
       <option *ngFor="let type of types" [ngValue]="type">
         {{ displayLabel(type) }}
       </option>
