fix link hub tendency

--- a/client-jss/src/app/main/components/main/main.component.html
+++ b/client-jss/src/app/main/components/main/main.component.html
@@ -306,7 +306,7 @@
                 <div class="col-md-12">
                   <div class="section-title-block d-flex">
                     <h3 class="section-widget-title">Tendances</h3>
-                    <a routerLink="'/post/tendency'" class="text-uppercase section-title-link">
+                    <a routerLink="/post/tendency" class="text-uppercase section-title-link">
                       Voir tous
                       <svg width="24" height="24" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
                         <path
