ended backend and mockup front end for subscriptions

--- a/client-jss/src/app/main/components/post/post.component.html
+++ b/client-jss/src/app/main/components/post/post.component.html
@@ -146,7 +146,7 @@
                     intégralité et de bien d'autres !</p>
                   <div><a class="btn btn-secondary mt-3" style="margin-right: 20px;cursor: pointer;"
                       (click)="openSubscribe($event)">Lire pour 1 €</a>
-                    <a href="/abonnement" class="btn btn-yellow mt-3" style="cursor: pointer;"
+                    <a class="btn btn-yellow mt-3" style="cursor: pointer;"
                       (click)="openSubscribe($event)">S'abonner</a>
                   </div>
                 </div>
