--- a/client/src/app/modules/accounting/components/add-accounting-record/add-accounting-record.component.html
+++ b/client/src/app/modules/accounting/components/add-accounting-record/add-accounting-record.component.html
@@ -71,6 +71,9 @@
   (click)="addAccountingRecord()">
   <mat-icon>add</mat-icon>
 </button>
+<button matTooltip="Contrepasser" mat-fab color="accent" class="third-fab-button" (click)="counterPart()">
+  <mat-icon>undo</mat-icon>
+</button>
 <button matTooltip="Enregistrer les opérations" mat-fab color="warn" class="fab-button" (click)="saveOperations()">
   <mat-icon>save</mat-icon>
 </button>
