--- a/client/src/app/modules/administration/components/constant/constant.component.html
+++ b/client/src/app/modules/administration/components/constant/constant.component.html
@@ -43,6 +43,14 @@
           </tr>
           <tr>
             <td>
+              <select-accounting-journal [(model)]="constant.accountingJournalSituation" [form]="constantForm"
+                propertyName="accountingJournalSituation" label="Journal de comptabilité - Situation"
+                [isMandatory]="true" [isDisabled]="!editMode">
+              </select-accounting-journal>
+            </td>
+          </tr>
+          <tr>
+            <td>
               <select-accounting-journal [(model)]="constant.accountingJournalSalary" [form]="constantForm"
                 propertyName="accountingJournalSalary" label="Journal de comptabilité - Salaires" [isMandatory]="true"
                 [isDisabled]="!editMode">
@@ -1033,6 +1041,13 @@
               <autocomplete-employee [(model)]="constant.employeeBillingResponsible" [form]="constantForm"
                 propertyName="employeeBillingResponsible" [isMandatory]="true" [isDisabled]="!editMode"
                 label="Employé responsable de la facturation"></autocomplete-employee>
+            </td>
+          </tr>
+          <tr>
+            <td>
+              <autocomplete-employee [(model)]="constant.employeeProductionDirector" [form]="constantForm"
+                propertyName="employeeProductionDirector" [isMandatory]="true" [isDisabled]="!editMode"
+                label="Employé responsable de la production"></autocomplete-employee>
             </td>
           </tr>
           <tr>
